tests/type-checking/arithmetic/minus-mul-div-mod/mul_int_list_int_fail.xdsl
// RUN: choco-opt -p check-assign-target,name-analysis,type-checking %s | filecheck %s

// 
// [0] * 0
// 


builtin.module() {
  choco.ast.program() {} {
    choco.ast.binary_expr() ["op" = "*"] {
      choco.ast.list_expr() {
        choco.ast.literal() ["value" = 0 : !i32]
      }
    } {
      choco.ast.literal() ["value" = 0 : !i32]
    }
  }
}
// CHECK: Semantic error:
